<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8E1EE"
    tools:context=".Principal"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="138dp"
            android:layout_height="111dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="136dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gfc" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:text="@string/cuenta"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="89dp"
            android:layout_height="33dp"
            android:layout_marginTop="296dp"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="Activa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="117dp"
            android:text="@string/saldo"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/button5"
            android:layout_width="131dp"
            android:layout_height="57dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/boton_registro"
            android:onClick="@string/retiro"
            android:text="@string/recargaPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button7"
            android:layout_width="182dp"
            android:layout_height="53dp"
            android:layout_marginStart="208dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/boton_registro"
            android:text="@string/transferencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="129dp"
            android:layout_height="53dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="144dp"
            android:background="@drawable/boton_registro"
            android:text="@string/salir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button8"
            android:layout_width="185dp"
            android:layout_height="55dp"
            android:layout_marginStart="208dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/boton_registro"
            android:text="@string/qr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/usuario"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_drawer_principal" />


</androidx.drawerlayout.widget.DrawerLayout>