<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7E0ED"
    android:backgroundTint="#D7E0ED">

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_registro"
        android:backgroundTint="#00D5DD"
        android:onClick="paginaInicio"
        android:text="Retirar"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="502dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/retiro"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="387dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="305dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuenta"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="263dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gfc"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="173dp"
        android:layout_height="24dp"
        android:text="Sofia Vivanco Gutierrez"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="230dp" />
</androidx.constraintlayout.widget.ConstraintLayout>